--- a/estatesale-starter_Free28-10-2020_1078274379/starter/index.html
+++ b/estatesale-starter_Free28-10-2020_1078274379/starter/index.html
@@ -24,7 +24,7 @@ Author URL: http://w3layouts.com
   <div class="container">
       <nav class="navbar navbar-expand-lg stroke px-0">
           <h1> <a class="navbar-brand" href="index.html">
-                  <span class="fa fa-home"></span> Estate sale
+                  <span class="fa fa-home"></span> Productos al servicio de Xalapa
               </a></h1>
           <!-- if logo is image enable this   
   <a class="navbar-brand" href="#index.html">
@@ -106,21 +106,21 @@ Author URL: http://w3layouts.com
 			<div class="container">
 				<div class="middle-section text-center">
 					<div class="section-width">
-						<p>It's great to be home!</p>
-						<h2>Find a property today</h2>
+						<p>¡ES GRANDIOSO ENCONTRAR PRODUCTOS DE CALIDAD A PRECIOS JUSTOS!</p>
+						<h2>ENCUENTRA TU PRODUCTO ADECUADO</h2>
 						<div class="most-searches">
-							<h4>Most Searches</h4>
+							<h4>Más búsquedas</h4>
 							<ul>
-								<li><a href="#link">Villa</a></li>
-								<li><a href="#link">Apartment</a></li>
-								<li><a href="#link">Private house</a></li>
+								<li><a href="#link">Nombre del producto</a></li>
+								<li><a href="#link">Precios</a></li>
+								<li><a href="#link">Clasificación</a></li>
 							</ul>
 						</div>
 						<form action="#" class="w3l-cover-3-gd" method="GET">
-							<input type="search" name="text" placeholder="Enter keywords" required>
+							<input type="search" name="text" placeholder="ingrese palabras clave" required>
 							<span class="input-group-btn">
 								<select class="btn btn-default" name="ext" required>
-									<option selected="">Office</option>
+									<option selected="">Precio</option>
 									<option>Villa</option>
 									<option>Apartment</option>
 									<option>Private house</option>
@@ -132,7 +132,7 @@ Author URL: http://w3layouts.com
 							</span>
 							<span class="input-group-btn">
 								<select class="btn btn-default" name="ext" required>
-									<option selected="">Select Country</option>
+									<option selected="">Clasificación</option>
 									<option>Australia</option>
 									<option>London</option>
 									<option>India</option>
@@ -142,7 +142,7 @@ Author URL: http://w3layouts.com
 									<option>Srilanka</option>
 								</select>
 							</span>
-							<button type="submit" class="btn-primary">Search</button>
+							<button type="submit" class="btn-primary">Buscar</button>
 						</form>
 					</div>
 					<section id="bottom" class="demo">
@@ -156,7 +156,7 @@ Author URL: http://w3layouts.com
     <div class="locations py-5">
         <div class="container py-lg-5 py-md-4 py-2">
             <div class="heading text-center mx-auto">
-                <h3 class="title-big">Top Properties</h3>
+                <h3 class="title-big">PRODUCTOS MÁS VENDIDOS</h3>
             </div>
             <div class="row pt-md-5 pt-4">
                 <div class="col-lg-4 col-md-6">
@@ -280,7 +280,7 @@ Author URL: http://w3layouts.com
 <div class="w3l-news" id="news">
     <section id="grids5-block" class="py-5">
         <div class="container py-lg-5 py-md-4 py-2">
-            <h3 class="title-big text-center">Tips and Advices</h3>
+            <h3 class="title-big text-center">PRODUCTOS CON REBAJAS</h3>
             <div class="row mt-lg-5 mt-4 pt-3">
                 <div class="col-lg-4 col-md-6 mt-md-0 mt-sm-4">
                     <div class="grids5-info">
