--- a/estatesale-starter_Free28-10-2020_1078274379/starter/index.html
+++ b/estatesale-starter_Free28-10-2020_1078274379/starter/index.html
@@ -45,15 +45,7 @@ Author URL: http://w3layouts.com
                   <li class="nav-item @@listing__active">
                       <a class="nav-link" href="listing.html">Producto</a>
                   </li>
-                  <li class="nav-item dropdown @@property__active">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Property <span class="fa fa-angle-down"></span>
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item @@ps__active" href="property-single.html">Single property</a>
-                      </div>
-                  </li>
+                  
                   <li class="nav-item dropdown @@pages__active">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -291,8 +283,8 @@ Author URL: http://w3layouts.com
                                 <span class="small">October</span>
                             </a>
                         </span>
-                        <a href="#blog-single" class="d-block zoom"><img src="assets/images/p1.jpg" alt=""
-                                class="img-fluid news-image" /></a>
+                        <a href="#blog-single" class="d-block zoom"><img src="assets\images\GelAntibacterial.jpg" alt=""
+                                class="C:\Users\cesar\Desktop\Sistemas web\ProyectoSistemas-main\ProyectoSistemas-main\estatesale-starter_Free28-10-2020_1078274379\starter\assets\images\CubreBocas.jpg" /></a>
                         <div class="blog-info">
                             <a href="#category" class="category">Uncategorized</a>
                             <h4><a href="#blog-single">Retail banks wake up to digital lending this year</a></h4>
@@ -309,7 +301,7 @@ Author URL: http://w3layouts.com
                                 <span class="small">October</span>
                             </a>
                         </span>
-                        <a href="#blog-single" class="d-block zoom"><img src="assets/images/p2.jpg" alt=""
+                        <a href="#blog-single" class="d-block zoom"><img src="assets\images\PaqueteDeAgua.jpg" alt=""
                                 class="img-fluid news-image" /></a>
                         <div class="blog-info">
                             <a href="#category" class="category">Uncategorized</a>
@@ -327,8 +319,8 @@ Author URL: http://w3layouts.com
                                 <span class="small">October</span>
                             </a>
                         </span>
-                        <a href="#blog-single" class="d-block zoom"><img src="assets/images/p3.jpg" alt=""
-                                class="img-fluid news-image" /></a>
+                        <a href="#blog-single" class="d-block zoom"><img src="assets\images\PapelHigienico.jpg" alt=""
+                                class="assets\images\GelAntibacterial.jpg" /></a>
                         <div class="blog-info">
                             <a href="#category" class="category">Uncategorized</a>
                             <h4><a href="#blog-single">Harvest great ideas from your company’s best assets</a></h4>
